--- a/css/municipal.css
+++ b/css/municipal.css
@@ -71,6 +71,7 @@
 
 .card-content {
   padding: 1.2rem;
+  text-align: center;
 }
 
 .card-content h3 {
@@ -85,7 +86,7 @@
 
 .card-footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
