--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 
 /* Header Styles */
 header {
-  background: #2c3e50;
+  background:#020817;
   color: white;
   position: sticky;
   top: 0;
@@ -47,7 +47,7 @@ nav a {
 }
 
 nav a:hover, nav a.active {
-  color: #ffb80e;
+  color:#fff;
 }
 
 /* Hero Section */
@@ -172,16 +172,17 @@ header {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  background: #f39c12;
+  background: rgba(0, 0, 0, 0.02);
   padding: 0.5rem 1rem;
   border-radius: 4px;
-  color: white;
+  color: #e67e22;
   transition: background 0.3s;
 }
 
 .login-btn:hover {
   background: #e67e22;
-  color: white;
+  color:#e67e22;;
+;
 }
 
 /* Mobile responsiveness */
@@ -254,7 +255,7 @@ header {
 }
 
 .login-btn:hover {
-  background: #982121;
+  background: #ffa600;
   transform: translateY(-2px);
 }
 .toast {
@@ -547,7 +548,7 @@ body {
 
 /* Header */
 header {
-  background-color: #233142;
+  background-color: #020817;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -621,7 +622,7 @@ nav a.login {
 
 /* Footer */
 footer {
-  background-color: #233142;
+  background-color: #020817;
   color: white;
   text-align: center;
   padding: 1rem;
