--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ nav a:hover, nav a.active {
 
 /* Footer */
 footer {
-  background: #34495e;
+  background: #982121	;
   color: white;
   text-align: center;
   padding: 2rem 0;
@@ -541,7 +541,7 @@ body {
 
 /* Header */
 header {
-  background-color: #233142;
+  background-color: #982121	;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -615,7 +615,7 @@ nav a.login {
 
 /* Footer */
 footer {
-  background-color: #233142;
+  background-color: #982121	;
   color: white;
   text-align: center;
   padding: 1rem;
